# yap

./: .gitignore  CMakeLists.txt  client.cpp  server.cpp  websocket.cpp  websocket.hpp  yap.cpp
docs/ADR/: 001_websockets_as_comms_protocol.md
include/: billboard.hpp  chat.hpp  contact.hpp  conversation.hpp  global.hpp  input.hpp
ui/components/chat/: chat.cpp  chat.hpp
ui/components/chat/feed/: conversation.cpp  conversation.hpp  message.cpp  message.hpp
ui/components/chat/footer/: input.cpp  input.hpp
ui/components/chat/header/: billboard.cpp  contact.cpp  contact.hpp  menu.cpp  menu.hpp
